[package]
name = "poc-taffy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = "0.26.1"
taffy = { version = "0.4.0", features = [] }
terminal_size = "0.3.0"
rand = { version = "0.9.0-alpha.0", features = [] }
